--- a/com.vreshly/Views/Shop/Index.cshtml
+++ b/com.vreshly/Views/Shop/Index.cshtml
@@ -917,15 +917,15 @@
                             <nav class="pagination pagination-wrap mb-10 mb-sm-0">
                                 <ul class="pagination" id="pagination">
                                     @*<li class="disabled prev">
-                                        <i class="ion-ios-arrow-thin-left"></i>
-                                    </li>
-                                    <li class="active"><a>1</a></li>
-                                    <li>
-                                        <a href="#">2</a>
-                                    </li>
-                                    <li class="next">
-                                        <a href="#" title="Next >>"><i class="ion-ios-arrow-thin-right"></i></a>
-                                    </li>*@
+                                            <i class="ion-ios-arrow-thin-left"></i>
+                                        </li>
+                                        <li class="active"><a>1</a></li>
+                                        <li>
+                                            <a href="#">2</a>
+                                        </li>
+                                        <li class="next">
+                                            <a href="#" title="Next >>"><i class="ion-ios-arrow-thin-right"></i></a>
+                                        </li>*@
                                 </ul>
                             </nav>
                             <p class="desc-content text-center text-sm-right" id="pagination-content"></p>
@@ -953,54 +953,54 @@
                         </div>
                         <!--<div class="widget-list widget-mb-1">
                             <h3 class="widget-title">Menu Categories</h3>-->
-                            <!-- Widget Menu Start -->
-                            <!--<nav>
-                                <ul class="mobile-menu p-0 m-0">
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Breads</a>
-                                        <ul class="dropdown">
-                                            <li><a href="#">Skateboard (02)</a></li>
-                                            <li><a href="#">Surfboard (4)</a></li>
-                                            <li><a href="#">Accessories (3)</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Fruits</a>
-                                        <ul class="dropdown">
-                                            <li><a href="#">Samsome</a></li>
-                                            <li><a href="#">GL Stylus (4)</a></li>
-                                            <li><a href="#">Uawei (3)</a></li>
-                                            <li><a href="#">Avocado (3)</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Vagetables</a>
-                                        <ul class="dropdown">
-                                            <li><a href="#">Power Bank</a></li>
-                                            <li><a href="#">Data Cable (4)</a></li>
-                                            <li><a href="#">Avocado (3)</a></li>
-                                            <li><a href="#">Brocoly (3)</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Organic Food</a>
-                                        <ul class="dropdown">
-                                            <li><a href="#">Vagetables</a></li>
-                                            <li><a href="#">Green Food (4)</a></li>
-                                            <li><a href="#">Coconut (3)</a></li>
-                                            <li><a href="#">Cabage (3)</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </nav>-->
-                            <!-- Widget Menu End -->
+                        <!-- Widget Menu Start -->
+                        <!--<nav>
+                            <ul class="mobile-menu p-0 m-0">
+                                <li class="menu-item-has-children">
+                                    <a href="#">Breads</a>
+                                    <ul class="dropdown">
+                                        <li><a href="#">Skateboard (02)</a></li>
+                                        <li><a href="#">Surfboard (4)</a></li>
+                                        <li><a href="#">Accessories (3)</a></li>
+                                    </ul>
+                                </li>
+                                <li class="menu-item-has-children">
+                                    <a href="#">Fruits</a>
+                                    <ul class="dropdown">
+                                        <li><a href="#">Samsome</a></li>
+                                        <li><a href="#">GL Stylus (4)</a></li>
+                                        <li><a href="#">Uawei (3)</a></li>
+                                        <li><a href="#">Avocado (3)</a></li>
+                                    </ul>
+                                </li>
+                                <li class="menu-item-has-children">
+                                    <a href="#">Vagetables</a>
+                                    <ul class="dropdown">
+                                        <li><a href="#">Power Bank</a></li>
+                                        <li><a href="#">Data Cable (4)</a></li>
+                                        <li><a href="#">Avocado (3)</a></li>
+                                        <li><a href="#">Brocoly (3)</a></li>
+                                    </ul>
+                                </li>
+                                <li class="menu-item-has-children">
+                                    <a href="#">Organic Food</a>
+                                    <ul class="dropdown">
+                                        <li><a href="#">Vagetables</a></li>
+                                        <li><a href="#">Green Food (4)</a></li>
+                                        <li><a href="#">Coconut (3)</a></li>
+                                        <li><a href="#">Cabage (3)</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </nav>-->
+                        <!-- Widget Menu End -->
                         <!--</div>-->
                         <div class="widget-list widget-mb-1">
                             <h3 class="widget-title">Categories</h3>
                             <div class="sidebar-body">
                                 <ul class="sidebar-list" id="sidebar-categories">
                                     <li><a href="#">All Product</a></li>
-                                    
+
                                 </ul>
                             </div>
                         </div>
@@ -1042,73 +1042,87 @@
                             <h3 class="widget-title">Recent Products</h3>
                             <div class="sidebar-body" id="sidebar-products">
                                 @*<div class="sidebar-product align-items-center">
-                                    <a href="product-details.html" class="image">
-                                        <img src="~/frontendassets/images/product/small-product/1.jpg" alt="product">
-                                    </a>
-                                    <div class="product-content">
-                                        <div class="product-title">
-                                            <h4 class="title-2"> <a href="product-details.html">Product dummy name</a></h4>
-                                        </div>
-                                        <div class="price-box">
-                                            <span class="regular-price ">$80.00</span>
-                                            <span class="old-price"><del>$90.00</del></span>
-                                        </div>
-                                        <div class="product-rating">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star-o"></i>
-                                            <i class="fa fa-star-o"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="sidebar-product align-items-center">
-                                    <a href="product-details.html" class="image">
-                                        <img src="~/frontendassets/images/product/small-product/2.jpg" alt="product">
-                                    </a>
-                                    <div class="product-content">
-                                        <div class="product-title">
-                                            <h4 class="title-2"> <a href="product-details.html">Product dummy title</a></h4>
-                                        </div>
-                                        <div class="price-box">
-                                            <span class="regular-price ">$50.00</span>
-                                            <span class="old-price"><del>$60.00</del></span>
-                                        </div>
-                                        <div class="product-rating">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star-half-o"></i>
-                                            <i class="fa fa-star-o"></i>
+                                        <a href="product-details.html" class="image">
+                                            <img src="~/frontendassets/images/product/small-product/1.jpg" alt="product">
+                                        </a>
+                                        <div class="product-content">
+                                            <div class="product-title">
+                                                <h4 class="title-2"> <a href="product-details.html">Product dummy name</a></h4>
+                                            </div>
+                                            <div class="price-box">
+                                                <span class="regular-price ">$80.00</span>
+                                                <span class="old-price"><del>$90.00</del></span>
+                                            </div>
+                                            <div class="product-rating">
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star-o"></i>
+                                                <i class="fa fa-star-o"></i>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="sidebar-product align-items-center">
-                                    <a href="product-details.html" class="image">
-                                        <img src="~/frontendassets/images/product/small-product/3.jpg" alt="product">
-                                    </a>
-                                    <div class="product-content">
-                                        <div class="product-title">
-                                            <h4 class="title-2"> <a href="product-details.html">Product title here</a></h4>
-                                        </div>
-                                        <div class="price-box">
-                                            <span class="regular-price ">$40.00</span>
-                                            <span class="old-price"><del>$50.00</del></span>
-                                        </div>
-                                        <div class="product-rating">
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star"></i>
-                                            <i class="fa fa-star-half-o"></i>
-                                            <i class="fa fa-star-half-o"></i>
-                                            <i class="fa fa-star-o"></i>
+                                    <div class="sidebar-product align-items-center">
+                                        <a href="product-details.html" class="image">
+                                            <img src="~/frontendassets/images/product/small-product/2.jpg" alt="product">
+                                        </a>
+                                        <div class="product-content">
+                                            <div class="product-title">
+                                                <h4 class="title-2"> <a href="product-details.html">Product dummy title</a></h4>
+                                            </div>
+                                            <div class="price-box">
+                                                <span class="regular-price ">$50.00</span>
+                                                <span class="old-price"><del>$60.00</del></span>
+                                            </div>
+                                            <div class="product-rating">
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star-half-o"></i>
+                                                <i class="fa fa-star-o"></i>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>*@
+                                    <div class="sidebar-product align-items-center">
+                                        <a href="product-details.html" class="image">
+                                            <img src="~/frontendassets/images/product/small-product/3.jpg" alt="product">
+                                        </a>
+                                        <div class="product-content">
+                                            <div class="product-title">
+                                                <h4 class="title-2"> <a href="product-details.html">Product title here</a></h4>
+                                            </div>
+                                            <div class="price-box">
+                                                <span class="regular-price ">$40.00</span>
+                                                <span class="old-price"><del>$50.00</del></span>
+                                            </div>
+                                            <div class="product-rating">
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star"></i>
+                                                <i class="fa fa-star-half-o"></i>
+                                                <i class="fa fa-star-half-o"></i>
+                                                <i class="fa fa-star-o"></i>
+                                            </div>
+                                        </div>
+                                    </div>*@
                             </div>
                         </div>
                     </div>
                 </aside>
                 <!-- Sidebar Widget End -->
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Area Start Here -->
+<div class="modal fade obrien-modal" id="exampleModalCenter" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <button type="button" class="close close-button" data-dismiss="modal" aria-label="Close">
+                <span class="close-icon" aria-hidden="true">x</span>
+            </button>
+            <div class="modal-body">
+                
             </div>
         </div>
     </div>
