--- a/com.vreshly/Views/Shop/Index.cshtml
+++ b/com.vreshly/Views/Shop/Index.cshtml
@@ -1004,7 +1004,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="widget-list widget-mb-2">
+                        @*<div class="widget-list widget-mb-2">
                             <h3 class="widget-title">Color</h3>
                             <div class="sidebar-body">
                                 <div class="sidebar-list">
@@ -1020,21 +1020,12 @@
                                     <button type="button" class="btn navy"></button>
                                 </div>
                             </div>
-                        </div>
+                        </div>*@
                         <div class="widget-list widget-mb-3">
-                            <h3 class="widget-title">Tags</h3>
+                            <h3 class="widget-title">Brands</h3>
                             <div class="sidebar-body">
-                                <ul class="tags">
-                                    <li><a href="#">Car</a></li>
-                                    <li><a href="#">Parts</a></li>
-                                    <li><a href="#">Shop</a></li>
-                                    <li><a href="#">Tayer</a></li>
-                                    <li><a href="#">Seat</a></li>
-                                    <li><a href="#">Engine</a></li>
-                                    <li><a href="#">Parts</a></li>
-                                    <li><a href="#">Fuel</a></li>
-                                    <li><a href="#">Modern</a></li>
-                                    <li><a href="#">Brake</a></li>
+                                <ul class="sidebar-list" id="sidebar-brands">
+                                    
                                 </ul>
                             </div>
                         </div>
