--- a/com.vreshly/Views/Shop/Cart.cshtml
+++ b/com.vreshly/Views/Shop/Cart.cshtml
@@ -20,8 +20,8 @@
                                 <th class="pro-remove">Remove</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
+                        <tbody id="cart-table">
+                            @*<tr>
                                 <td class="pro-thumbnail"><a href="#"><img class="img-fluid" src="~/frontendassets/images/product/small-size/1.jpg" alt="Product" /></a></td>
                                 <td class="pro-title"><a href="#">Product dummy title <br> s / green</a></td>
                                 <td class="pro-price"><span>$295.00</span></td>
@@ -92,7 +92,7 @@
                                 </td>
                                 <td class="pro-subtotal"><span>$110.00</span></td>
                                 <td class="pro-remove"><a href="#"><i class="ion-trash-b"></i></a></td>
-                            </tr>
+                            </tr>*@
                         </tbody>
                     </table>
                 </div>
