cart page update added

--- a/com.vreshly/Views/Shop/Cart.cshtml
+++ b/com.vreshly/Views/Shop/Cart.cshtml
@@ -105,7 +105,7 @@
                         </form>
                     </div>
                     <div class="cart-update mt-sm-16">
-                        <a href="#" class="btn obrien-button primary-btn">Update Cart</a>
+                        <a id="update-cart" class="btn obrien-button primary-btn">Update Cart</a>
                     </div>
                 </div>
             </div>
