--- a/com.vreshly/Views/Shop/Cart.cshtml
+++ b/com.vreshly/Views/Shop/Cart.cshtml
@@ -21,78 +21,7 @@
                             </tr>
                         </thead>
                         <tbody id="cart-table">
-                            @*<tr>
-                                <td class="pro-thumbnail"><a href="#"><img class="img-fluid" src="~/frontendassets/images/product/small-size/1.jpg" alt="Product" /></a></td>
-                                <td class="pro-title"><a href="#">Product dummy title <br> s / green</a></td>
-                                <td class="pro-price"><span>$295.00</span></td>
-                                <td class="pro-quantity">
-                                    <div class="quantity">
-                                        <div class="cart-plus-minus">
-                                            <input class="cart-plus-minus-box" value="0" type="text">
-                                            <div class="dec qtybutton">-</div>
-                                            <div class="inc qtybutton">+</div>
-                                            <div class="dec qtybutton"><i class="fa fa-minus"></i></div>
-                                            <div class="inc qtybutton"><i class="fa fa-plus"></i></div>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="pro-subtotal"><span>$295.00</span></td>
-                                <td class="pro-remove"><a href="#"><i class="ion-trash-b"></i></a></td>
-                            </tr>
-                            <tr>
-                                <td class="pro-thumbnail"><a href="#"><img class="img-fluid" src="~/frontendassets/images/product/small-size/2.jpg" alt="Product" /></a></td>
-                                <td class="pro-title"><a href="#">Product title here <br> red</a></td>
-                                <td class="pro-price"><span>$275.00</span></td>
-                                <td class="pro-quantity">
-                                    <div class="quantity">
-                                        <div class="cart-plus-minus">
-                                            <input class="cart-plus-minus-box" value="0" type="text">
-                                            <div class="dec qtybutton">-</div>
-                                            <div class="inc qtybutton">+</div>
-                                            <div class="dec qtybutton"><i class="fa fa-minus"></i></div>
-                                            <div class="inc qtybutton"><i class="fa fa-plus"></i></div>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="pro-subtotal"><span>$550.00</span></td>
-                                <td class="pro-remove"><a href="#"><i class="ion-trash-b"></i></a></td>
-                            </tr>
-                            <tr>
-                                <td class="pro-thumbnail"><a href="#"><img class="img-fluid" src="~/frontendassets/images/product/small-size/3.jpg" alt="Product" /></a></td>
-                                <td class="pro-title"><a href="#">Product dummy title <br> s</a></td>
-                                <td class="pro-price"><span>$295.00</span></td>
-                                <td class="pro-quantity">
-                                    <div class="quantity">
-                                        <div class="cart-plus-minus">
-                                            <input class="cart-plus-minus-box" value="0" type="text">
-                                            <div class="dec qtybutton">-</div>
-                                            <div class="inc qtybutton">+</div>
-                                            <div class="dec qtybutton"><i class="fa fa-minus"></i></div>
-                                            <div class="inc qtybutton"><i class="fa fa-plus"></i></div>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="pro-subtotal"><span>$295.00</span></td>
-                                <td class="pro-remove"><a href="#"><i class="ion-trash-b"></i></a></td>
-                            </tr>
-                            <tr>
-                                <td class="pro-thumbnail"><a href="#"><img class="img-fluid" src="~/frontendassets/images/product/small-size/4.jpg" alt="Product" /></a></td>
-                                <td class="pro-title"><a href="#">Dummy Title</a></td>
-                                <td class="pro-price"><span>$110.00</span></td>
-                                <td class="pro-quantity">
-                                    <div class="quantity">
-                                        <div class="cart-plus-minus">
-                                            <input class="cart-plus-minus-box" value="2" type="text">
-                                            <div class="dec qtybutton">-</div>
-                                            <div class="inc qtybutton">+</div>
-                                            <div class="dec qtybutton"><i class="fa fa-minus"></i></div>
-                                            <div class="inc qtybutton"><i class="fa fa-plus"></i></div>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="pro-subtotal"><span>$110.00</span></td>
-                                <td class="pro-remove"><a href="#"><i class="ion-trash-b"></i></a></td>
-                            </tr>*@
+                            
                         </tbody>
                     </table>
                 </div>
@@ -120,15 +49,15 @@
                             <table class="table">
                                 <tr>
                                     <td>Sub Total</td>
-                                    <td>$230</td>
+                                    <td>NGN <span class="sub-total"></span></td>
                                 </tr>
-                                <tr>
+                                @*<tr>
                                     <td>Shipping</td>
                                     <td>$70</td>
-                                </tr>
+                                </tr>*@
                                 <tr class="total">
                                     <td>Total</td>
-                                    <td class="total-amount">$300</td>
+                                    <td class="total-amount">300</td>
                                 </tr>
                             </table>
                         </div>
