--- a/com.vreshly/Views/Account/Login.cshtml
+++ b/com.vreshly/Views/Account/Login.cshtml
@@ -34,7 +34,7 @@
                             <button class="btn obrien-button-2 primary-color">Login</button>
                         </div>
                         <div class="single-input-item">
-                            <a href="register.html">Creat Account</a>
+                            <a asp-action="Register" asp-controller="Account">Creat Account</a>
                         </div>
                     </form>
                 </div>
