--- a/com.vreshly/Views/Shop/Index.cshtml
+++ b/com.vreshly/Views/Shop/Index.cshtml
@@ -18,11 +18,10 @@
                         <form class="d-flex flex-column w-100" action="#">
                             <div class="form-group">
                                 <select class="form-control nice-select w-100">
-                                    <option selected value="1">Alphabetically, A-Z</option>
-                                    <option value="2">Sort by popularity</option>
-                                    <option value="3">Sort by newness</option>
-                                    <option value="4">Sort by price: low to high</option>
-                                    <option value="5">Sort by price: high to low</option>
+                                    <option selected value="prodName">Alphabetically, A-Z</option>
+                                    <option value="dateDesc">Sort by newness</option>
+                                    <option value="priceAsc">Sort by price: low to high</option>
+                                    <option value="priceDesc">Sort by price: high to low</option>
                                 </select>
                             </div>
                         </form>
