--- a/com.vreshly/Views/Shop/Cart.cshtml
+++ b/com.vreshly/Views/Shop/Cart.cshtml
@@ -62,7 +62,7 @@
                             </table>
                         </div>
                     </div>
-                    <a href="checkout.html" class="btn obrien-button primary-btn d-block">Proceed To Checkout</a>
+                    <a asp-action="Checkout" asp-controller="Shop" class="btn obrien-button primary-btn d-block">Proceed To Checkout</a>
                 </div>
             </div>
         </div>
