--- a/com.vreshly/Views/Shared/_LayoutFrontend.cshtml
+++ b/com.vreshly/Views/Shared/_LayoutFrontend.cshtml
@@ -747,6 +747,9 @@
     <!-- Scroll to Top End -->
     <!-- JS
     ============================================ -->
+    <script type="text/javascript">
+        var baseUrl = "https://localhost:5201/";
+    </script>
     <!-- jQuery JS -->
     <script src="~/frontendassets/js/vendor/jquery-3.5.1.min.js"></script>
     <!-- jQuery Migrate JS -->
