--- a/com.vreshly/Views/Shared/_LayoutFrontend.cshtml
+++ b/com.vreshly/Views/Shared/_LayoutFrontend.cshtml
@@ -175,50 +175,50 @@
                                                 </a>
                                                 <div class="cart-item-wrapper dropdown-sidemenu dropdown-hover-2">
                                                     @*<div class="single-cart-item">
-                                                        <div class="cart-img">
-                                                            <a href="cart.html"><img src="~/frontendassets/images/cart/1.jpg" alt=""></a>
-                                                        </div>
-                                                        <div class="cart-text">
-                                                            <h5 class="title"><a href="cart.html">11. Product with video - navy</a></h5>
-                                                            <div class="cart-text-btn">
-                                                                <div class="cart-qty">
-                                                                    <span>1×</span>
-                                                                    <span class="cart-price">$98.00</span>
+                                                            <div class="cart-img">
+                                                                <a href="cart.html"><img src="~/frontendassets/images/cart/1.jpg" alt=""></a>
+                                                            </div>
+                                                            <div class="cart-text">
+                                                                <h5 class="title"><a href="cart.html">11. Product with video - navy</a></h5>
+                                                                <div class="cart-text-btn">
+                                                                    <div class="cart-qty">
+                                                                        <span>1×</span>
+                                                                        <span class="cart-price">$98.00</span>
+                                                                    </div>
+                                                                    <button type="button"><i class="ion-trash-b"></i></button>
                                                                 </div>
-                                                                <button type="button"><i class="ion-trash-b"></i></button>
                                                             </div>
                                                         </div>
-                                                    </div>
-                                                    <div class="single-cart-item">
-                                                        <div class="cart-img">
-                                                            <a href="cart.html"><img src="~/frontendassets/images/cart/2.jpg" alt=""></a>
-                                                        </div>
-                                                        <div class="cart-text">
-                                                            <h5 class="title"><a href="cart.html" title="10. This is the large title for testing large title and there is an image for testing - white">10. This is the large title for testing...</a></h5>
-                                                            <div class="cart-text-btn">
-                                                                <div class="cart-qty">
-                                                                    <span>1×</span>
-                                                                    <span class="cart-price">$98.00</span>
+                                                        <div class="single-cart-item">
+                                                            <div class="cart-img">
+                                                                <a href="cart.html"><img src="~/frontendassets/images/cart/2.jpg" alt=""></a>
+                                                            </div>
+                                                            <div class="cart-text">
+                                                                <h5 class="title"><a href="cart.html" title="10. This is the large title for testing large title and there is an image for testing - white">10. This is the large title for testing...</a></h5>
+                                                                <div class="cart-text-btn">
+                                                                    <div class="cart-qty">
+                                                                        <span>1×</span>
+                                                                        <span class="cart-price">$98.00</span>
+                                                                    </div>
+                                                                    <button type="button"><i class="ion-trash-b"></i></button>
                                                                 </div>
-                                                                <button type="button"><i class="ion-trash-b"></i></button>
                                                             </div>
                                                         </div>
-                                                    </div>
-                                                    <div class="single-cart-item">
-                                                        <div class="cart-img">
-                                                            <a href="cart.html"><img src="~/frontendassets/images/cart/3.jpg" alt=""></a>
-                                                        </div>
-                                                        <div class="cart-text">
-                                                            <h5 class="title"><a href="cart.html">1. New and sale badge product - s / red</a></h5>
-                                                            <div class="cart-text-btn">
-                                                                <div class="cart-qty">
-                                                                    <span>1×</span>
-                                                                    <span class="cart-price">$98.00</span>
-                                                                </div>
-                                                                <button type="button"><i class="ion-trash-b"></i></button>
+                                                        <div class="single-cart-item">
+                                                            <div class="cart-img">
+                                                                <a href="cart.html"><img src="~/frontendassets/images/cart/3.jpg" alt=""></a>
                                                             </div>
-                                                        </div>
-                                                    </div>*@
+                                                            <div class="cart-text">
+                                                                <h5 class="title"><a href="cart.html">1. New and sale badge product - s / red</a></h5>
+                                                                <div class="cart-text-btn">
+                                                                    <div class="cart-qty">
+                                                                        <span>1×</span>
+                                                                        <span class="cart-price">$98.00</span>
+                                                                    </div>
+                                                                    <button type="button"><i class="ion-trash-b"></i></button>
+                                                                </div>
+                                                            </div>
+                                                        </div>*@
                                                     <div class="cart-price-total d-flex justify-content-between">
                                                         <h5>Total :</h5>
                                                         <h5 class="total"></h5>
@@ -379,50 +379,50 @@
                                                 </a>
                                                 <div class="cart-item-wrapper dropdown-sidemenu dropdown-hover-2">
                                                     @*<div class="single-cart-item">
-                                                        <div class="cart-img">
-                                                            <a href="cart.html"><img src="~/frontendassets/images/cart/1.jpg" alt=""></a>
-                                                        </div>
-                                                        <div class="cart-text">
-                                                            <h5 class="title"><a href="cart.html">11. Product with video - navy</a></h5>
-                                                            <div class="cart-text-btn">
-                                                                <div class="cart-qty">
-                                                                    <span>1×</span>
-                                                                    <span class="cart-price">$98.00</span>
+                                                            <div class="cart-img">
+                                                                <a href="cart.html"><img src="~/frontendassets/images/cart/1.jpg" alt=""></a>
+                                                            </div>
+                                                            <div class="cart-text">
+                                                                <h5 class="title"><a href="cart.html">11. Product with video - navy</a></h5>
+                                                                <div class="cart-text-btn">
+                                                                    <div class="cart-qty">
+                                                                        <span>1×</span>
+                                                                        <span class="cart-price">$98.00</span>
+                                                                    </div>
+                                                                    <button type="button"><i class="ion-trash-b"></i></button>
                                                                 </div>
-                                                                <button type="button"><i class="ion-trash-b"></i></button>
                                                             </div>
                                                         </div>
-                                                    </div>
-                                                    <div class="single-cart-item">
-                                                        <div class="cart-img">
-                                                            <a href="cart.html"><img src="~/frontendassets/images/cart/2.jpg" alt=""></a>
-                                                        </div>
-                                                        <div class="cart-text">
-                                                            <h5 class="title"><a href="cart.html" title="10. This is the large title for testing large title and there is an image for testing - white">10. This is the large title for testing...</a></h5>
-                                                            <div class="cart-text-btn">
-                                                                <div class="cart-qty">
-                                                                    <span>1×</span>
-                                                                    <span class="cart-price">$98.00</span>
+                                                        <div class="single-cart-item">
+                                                            <div class="cart-img">
+                                                                <a href="cart.html"><img src="~/frontendassets/images/cart/2.jpg" alt=""></a>
+                                                            </div>
+                                                            <div class="cart-text">
+                                                                <h5 class="title"><a href="cart.html" title="10. This is the large title for testing large title and there is an image for testing - white">10. This is the large title for testing...</a></h5>
+                                                                <div class="cart-text-btn">
+                                                                    <div class="cart-qty">
+                                                                        <span>1×</span>
+                                                                        <span class="cart-price">$98.00</span>
+                                                                    </div>
+                                                                    <button type="button"><i class="ion-trash-b"></i></button>
                                                                 </div>
-                                                                <button type="button"><i class="ion-trash-b"></i></button>
                                                             </div>
                                                         </div>
-                                                    </div>
-                                                    <div class="single-cart-item">
-                                                        <div class="cart-img">
-                                                            <a href="cart.html"><img src="~/frontendassets/images/cart/3.jpg" alt=""></a>
-                                                        </div>
-                                                        <div class="cart-text">
-                                                            <h5 class="title"><a href="cart.html">1. New and sale badge product - s / red</a></h5>
-                                                            <div class="cart-text-btn">
-                                                                <div class="cart-qty">
-                                                                    <span>1×</span>
-                                                                    <span class="cart-price">$98.00</span>
-                                                                </div>
-                                                                <button type="button"><i class="ion-trash-b"></i></button>
+                                                        <div class="single-cart-item">
+                                                            <div class="cart-img">
+                                                                <a href="cart.html"><img src="~/frontendassets/images/cart/3.jpg" alt=""></a>
                                                             </div>
-                                                        </div>
-                                                    </div>*@
+                                                            <div class="cart-text">
+                                                                <h5 class="title"><a href="cart.html">1. New and sale badge product - s / red</a></h5>
+                                                                <div class="cart-text-btn">
+                                                                    <div class="cart-qty">
+                                                                        <span>1×</span>
+                                                                        <span class="cart-price">$98.00</span>
+                                                                    </div>
+                                                                    <button type="button"><i class="ion-trash-b"></i></button>
+                                                                </div>
+                                                            </div>
+                                                        </div>*@
                                                     <div class="cart-price-total d-flex justify-content-between">
                                                         <h5>Total :</h5>
                                                         <h5 class="total"></h5>
@@ -749,9 +749,7 @@
     <!-- Scroll to Top End -->
     <!-- JS
     ============================================ -->
-    <script type="text/javascript">
-        var baseUrl = "https://localhost:5201/";
-    </script>
+    <script type="text/javascript">var baseUrl = "https://localhost:5201/";</script>
     <!-- jQuery JS -->
     <script src="~/frontendassets/js/vendor/jquery-3.5.1.min.js"></script>
     <!-- jQuery Migrate JS -->
@@ -778,6 +776,7 @@
     @RenderSection("FooterScripts", required: false);
     <script src="~/js/cart.js"></script>
     <script src="~/js/jwtok.js"></script>
+    <script src="~/js/wishlist.js"></script>
 </body>
 
 </html>
