--- a/com.vreshly/Views/Home/Index.cshtml
+++ b/com.vreshly/Views/Home/Index.cshtml
@@ -683,7 +683,7 @@
                                         <div class="single-item">
                                             <div class="single-product position-relative mb-30">
                                                 <div class="product-image">
-                                                    <a class="d-block" href="product-details.html">
+                                                    <a class="d-block" asp-action="ProductDetail" asp-controller="Shop" asp-route-productId="@featuredProduct.Id">
                                                         <img src="@featuredProduct.MainImage" alt="" class="product-image-1 w-100">
                                                         <img src="@featuredProduct.ImageOne" alt="" class="product-image-2 position-absolute w-100">
                                                     </a>
@@ -697,7 +697,7 @@
                                                         <i class="fa fa-star-o"></i>
                                                     </div>
                                                     <div class="product-title">
-                                                        <h4 class="title-2"> <a href="product-details.html">@featuredProduct.ProductName</a></h4>
+                                                        <h4 class="title-2"> <a asp-action="ProductDetail" asp-controller="Shop" asp-route-productId="@featuredProduct.Id">@featuredProduct.ProductName</a></h4>
                                                     </div>
                                                     <div class="price-box">
                                                         <span class="regular-price ">NGN @featuredProduct.DiscountPrice</span>
@@ -711,10 +711,10 @@
                                                        data-category="@featuredProduct.Category" data-brand="@featuredProduct.Brand" title="Add To cart">
                                                         <i class="ion-bag"></i>
                                                     </a>
-                                                    <a href="compare.html" title="Compare">
+                                                    <a href="javascript:void()" title="Compare">
                                                         <i class="ion-ios-loop-strong"></i>
                                                     </a>
-                                                    <a href="wishlist.html" title="Add To Wishlist">
+                                                    <a href="javascript:void()" class="add-to-wishlist" data-id="@featuredProduct.Id" title="Add To Wishlist">
                                                         <i class="ion-ios-heart-outline"></i>
                                                     </a>
                                                     <a href="javascript:void()" data-id="@featuredProduct.Id" class="detail-view" title="Quick View">
@@ -722,44 +722,7 @@
                                                     </a>
                                                 </div>
                                             </div>
-                                            @*<div class="single-product position-relative">
-                                                    <div class="product-image">
-                                                        <a class="d-block" href="product-details.html">
-                                                            <img src="@featuredProduct.ImageTwo" alt="" class="product-image-1 w-100">
-                                                            <img src="@featuredProduct.ImageThree" alt="" class="product-image-2 position-absolute w-100">
-                                                        </a>
-                                                    </div>
-                                                    <div class="product-content">
-                                                        <div class="product-rating">
-                                                            <i class="fa fa-star"></i>
-                                                            <i class="fa fa-star"></i>
-                                                            <i class="fa fa-star"></i>
-                                                            <i class="fa fa-star-o"></i>
-                                                            <i class="fa fa-star-o"></i>
-                                                        </div>
-                                                        <div class="product-title">
-                                                            <h4 class="title-2"> <a href="product-details.html">@featuredProduct.ProductName</a></h4>
-                                                        </div>
-                                                        <div class="price-box">
-                                                            <span class="regular-price ">NGN @featuredProduct.DiscountPrice</span>
-                                                            <span class="old-price"><del>NGN @featuredProduct.SellingPrice</del></span>
-                                                        </div>
-                                                    </div>
-                                                    <div class="add-action d-flex position-absolute">
-                                                        <a href="cart.html" title="Add To cart">
-                                                            <i class="ion-bag"></i>
-                                                        </a>
-                                                        <a href="compare.html" title="Compare">
-                                                            <i class="ion-ios-loop-strong"></i>
-                                                        </a>
-                                                        <a href="wishlist.html" title="Add To Wishlist">
-                                                            <i class="ion-ios-heart-outline"></i>
-                                                        </a>
-                                                        <a href="#exampleModalCenter" data-toggle="modal" title="Quick View">
-                                                            <i class="ion-eye"></i>
-                                                        </a>
-                                                    </div>
-                                                </div>*@
+
                                         </div>
                                     }
                                 } }
@@ -832,7 +795,7 @@
                                         <div class="single-item">
                                             <div class="single-product position-relative mb-30">
                                                 <div class="product-image">
-                                                    <a class="d-block" href="product-details.html">
+                                                    <a class="d-block" asp-action="ProductDetail" asp-controller="Shop" asp-route-productId="@bestseller.Id">
                                                         <img src="@bestseller.MainImage" alt="" class="product-image-1 w-100">
                                                         <img src="@bestseller.ImageOne" alt="" class="product-image-2 position-absolute w-100">
                                                     </a>
@@ -846,7 +809,7 @@
                                                         <i class="fa fa-star-o"></i>
                                                     </div>
                                                     <div class="product-title">
-                                                        <h4 class="title-2"> <a href="product-details.html">@bestseller.ProductName</a></h4>
+                                                        <h4 class="title-2"> <a asp-action="ProductDetail" asp-controller="Shop" asp-route-productId="@bestseller.Id">@bestseller.ProductName</a></h4>
                                                     </div>
                                                     <div class="price-box">
                                                         <span class="regular-price ">NGN @bestseller.DiscountPrice</span>
@@ -860,10 +823,10 @@
                                                        data-category="@bestseller.Category" data-brand="@bestseller.Brand" title="Add To cart">
                                                         <i class="ion-bag"></i>
                                                     </a>
-                                                    <a href="compare.html" title="Compare">
+                                                    <a href="javascript:void()" title="Compare">
                                                         <i class="ion-ios-loop-strong"></i>
                                                     </a>
-                                                    <a href="wishlist.html" title="Add To Wishlist">
+                                                    <a href="javascript:void()" class="add-to-wishlist" data-id="@bestseller.Id" title="Add To Wishlist">
                                                         <i class="ion-ios-heart-outline"></i>
                                                     </a>
                                                     <a href="javascript:void()" data-id="@bestseller.Id" class="detail-view" title="Quick View">
@@ -1175,60 +1138,7 @@
                     <span class="close-icon" aria-hidden="true">x</span>
                 </button>
                 <div class="modal-body">
-                    @*<div class="container-fluid">
-                            <div class="row">
-                                <div class="col-lg-6 col-md-6 text-center">
-                                    <div class="product-image">
-                                        <img src="~/frontendassets/images/product/1.jpg" alt="Product Image">
-                                    </div>
-                                </div>
-                                <div class="col-lg-6 col-md-6">
-                                    <div class="modal-product">
-                                        <div class="product-content">
-                                            <div class="product-title">
-                                                <h4 class="title">Product dummy name</h4>
-                                            </div>
-                                            <div class="price-box">
-                                                <span class="regular-price ">$80.00</span>
-                                                <span class="old-price"><del>$90.00</del></span>
-                                            </div>
-                                            <div class="product-rating">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-o"></i>
-                                                <i class="fa fa-star-o"></i>
-                                                <span>1 Review</span>
-                                            </div>
-                                            <p class="desc-content">we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame bel...</p>
-                                            <form class="d-flex flex-column w-100" action="#">
-                                                <div class="form-group">
-                                                    <select class="form-control nice-select w-100">
-                                                        <option>S</option>
-                                                        <option>M</option>
-                                                        <option>L</option>
-                                                        <option>XL</option>
-                                                        <option>XXL</option>
-                                                    </select>
-                                                </div>
-                                            </form>
-                                            <div class="quantity-with_btn">
-                                                <div class="quantity">
-                                                    <div class="cart-plus-minus">
-                                                        <input class="cart-plus-minus-box" value="0" type="text">
-                                                        <div class="dec qtybutton">-</div>
-                                                        <div class="inc qtybutton">+</div>
-                                                    </div>
-                                                </div>
-                                                <div class="add-to_cart">
-                                                    <a class="btn obrien-button primary-btn" href="cart.html">Add to cart</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>*@
+
                 </div>
             </div>
         </div>
@@ -1268,6 +1178,7 @@
     <script src="~/js/cart.js"></script>
     <script src="~/js/jwtok.js"></script>
     <script src="~/js/home.js"></script>
+    <script src="~/js/wishlist.js"></script>
 
 </body>
 
